<resources>
    <string name="app_name">Bootleg Warioware</string>
    <!--Title Page-->
    <string name="title">Bootleg Warioware</string>
    <string name="play_button_title">Lets Go</string>
    <string name="scores_button_title">High Scores</string>
    <string name="settings_button_title">Settings</string>

    <!--Settings-->
    <string name="home">Back</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>

    <!--High Score-->
    <string name="highscore">High Scores</string>

    <!--Game Over Page-->
    <string name="results_title">Results</string>
    <string name="retry_button">Play Again</string>
    <string name="go_back_button">Go back to Menu</string>
    <string name="loading_score">1</string>
    <string name="game_over">GAME OVER</string>
    <string name="countdownGO">GO</string>

    <!--    Names of the Microgame-->
    <string name="game_demo">DEMO Game</string>
    <string name="game_order">Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    BULK UP Microgame-->
    <string name="prepare_to_duel">Prepare To Duel...</string>
    <string name="DUEL">DUEL</string>
    <string name="too_slow">TOO SLOW...</string>
    <string name="too_fast">TOO FAST...</string>


</resources>