<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bootleg_warioware_title"
    tools:context=".TitleFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63201094" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="150dp"
        android:layout_height="61dp"
        android:text="@string/play_button_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/warioware_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="523dp" />

    <Button
        android:id="@+id/highscoreButton"
        android:layout_width="150dp"
        android:layout_height="62dp"
        android:text="@string/scores_button_title"
        android:textSize="15sp"
        android:fontFamily="@font/warioware_font"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/settingButton"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <Button
        android:id="@+id/settingButton"
        android:layout_width="150dp"
        android:layout_height="62dp"
        android:text="@string/settings_button_title"
        android:textSize="15sp"
        android:fontFamily="@font/warioware_font"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/highscoreButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />



</androidx.constraintlayout.widget.ConstraintLayout>